--- a/src/index.css
+++ b/src/index.css
@@ -15,16 +15,23 @@
 }
 
 *::-webkit-scrollbar {
-  width: 8px;
+  width: 6px;
+  height: 6px;
+}
+
+*::-webkit-scrollbar-button {
+  width: 4px;
+  height: 4px;
 }
 
 *::-webkit-scrollbar-track {
   background: #dedede;
+  border-radius: 40px;
 }
 
 *::-webkit-scrollbar-thumb {
   background-color: #36173d;
-  border-radius: 10px;
+  border-radius: 40px;
   border: 0px solid pink;
 }
 
@@ -85,5 +92,14 @@ h4 {
     width: 100%;
     margin: 0 auto;
     padding: 16px 20px;
+  }
+
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
   }
 }
